default.css
* {
    padding: 0px;
    margin: 0px;
}

html, body { height: 99%; }

body { 
    font-family: Verdana, Tahoma, Helvetica, Arial, sans-serif;
    background-color: #333333;
    font-size: 14px;
    text-align: center;
}

table {
    width: 100%;
    border: none;
    border-spacing: 2px;
    white-space: nowrap;
}

th, td { 
    padding: 2px 10px; 
}

th {
    background-color: #aaaaaa;
}

td.hostname, td.address { 
    background-color: #ffffff; 
}

.output { 
    white-space: normal;
    text-align: left;
}

.subhosts { 
    margin: 2px;
    padding: 1px;
    font-size: 12px;
    text-align: left;
}

h1 {
    text-align: center;
    font-weight: bold;
    color: #ffffff;
}

h2.title {
    text-align: left;
    font-weight: bold;
    padding-bottom: 5px;
    font-size: 1.2em;
}

h3.title {
    text-align: left;
    font-weight: bold;
    padding: 10px 2px 0px 2px;
    font-size: 12px;
    color: #ffffff;
}

#content {
    height: 97.0%;
    margin: 10px;
}

.section {
    color: #ffffff;
    font-weight: bold;
    overflow: auto;
    padding: 20px 2px 0px 2px;
    margin: 10px 0;
}

.subsection { font-size: 12px; }

.stats {
    float: right;
    margin-top: -2em;
}

.stat {
    display: inline;
    padding: 3px;
    margin-left: 10px;
    color: black;
}

div.state {
    font-size: 20px;
    font-weight: bold;
    color: #ffffff;
    margin: 0px 2px 3px 2px;
    padding: 3px;
}

.up, .ok { background-color: #3ce126; }
.warning { background-color: #ffe400; }
.critical, .down { background-color: #ee0000; }
.pending { background-color: #AAAAAA; }
.unknown { background-color: #ff7600; }
.notification { background-color: #69b3b3; }
.acknowledged { background-color: #d3d3d3; }
.unreachable { background-color: #ee0000; }

.fortune {
    margin-top: 10px;
    color: #ffffff;
}

.statusFileState {
    color: #333333;
    position: fixed;
    top: 0;
    right: 0;
}

.problem_table {
    max-height: 44%;
    overflow: scroll;
}

.svlogo {
    position: fixed;
    width: 100%;
}

.svlogo img {
    margin: 0 auto;         
    width: 140px;
}

